--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@template/basic",
+  "name": "@tatemz/effect-forms",
   "version": "0.0.0",
   "type": "module",
   "packageManager": "pnpm@10.14.0",
@@ -28,6 +28,7 @@
     "changeset-publish": "pnpm build && TEST_DIST= pnpm vitest && changeset publish"
   },
   "dependencies": {
+    "@effect/platform": "^0.93.2",
     "effect": "^3.17.7"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "tsx": "^4.17.0",
+    "type-fest": "^5.2.0",
     "typescript": "^5.6.2",
     "vitest": "^3.2.0"
   },
